# stm32f030-hal

./: Cargo.toml  README.md
examples/: blinky.rs  blinky_delay.rs  flash_systick.rs  i2c_hal_ina260reader.rs  i2c_hal_ina260serial.rs  i2c_hal_ssd1306alphabeter.rs  led_hal_button_irq.rs  serial_echo.rs  spi_hal_apa102c.rs
src/: gpio.rs  i2c.rs  lib.rs  prelude.rs  serial.rs  spi.rs  timers.rs
